<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PowerSNS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reqister">用户注册</string>
    <string name="userName">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="RememberPsd">记住密码</string>
    <string name="nicheng">昵称 : 无极剑客</string>
    <string name="name">无极剑客</string>
    <string name="xinqing">心情 : 雨一直下，雨过天晴</string>
    <string name="xinqing_content">雨一直下,雨过天晴</string>
    <string name="place">广州市花都市风神大道</string>
    <string name="edit">改资料</string>
    <string name="delete">改密码</string>
    <string name="my_dairy">我的日志</string>
    <string name="my_picture">我的相册</string>
    <string name="list_frient">好友列表</string>
    <string name="free_frient">好友动态</string>
    <string name="recent_vistor">最近访客</string>
    <string name="my_music">我的音乐</string>
    <string name="your_nickname">您的昵称</string>
    <string name="age">请输入年龄</string>
    <string name="my_mood">请输入心情</string>
    <string name="my_sex">性别</string>
    <string name="mood">心情</string>
    <string name="detemine">确定</string>
    <string name="cancel">取消</string>
    <string name="My_album">我的相册</string>
     <string name="album_name">请输入相册名称</string>
    <string name="album_save">保存</string>
    <string name="album_back">返回</string> 
    <string name="add_album">添加相册</string> 
    <string name="update_album">修改</string> 
    <string name="comment_album">权限</string> 
    <string name="delept_album">删除</string> 
    <string name="planet_ptomry">选择相册</string>    
    <string name="add_photo">添加相片</string>
    <string name="comment">评论</string>
    <string name="all_comment">查看所有评论</string>
    <string name="add_friends">添加好友</string>
    <string name="uid">请输入账号</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="friend_apply">好友申请</string>
    <string name="mess">请求加你为好友</string>
    <string name="messagte">信息列表</string>
     <string name="title">标题 : </string>
    <string name="date">日期 : </string>
      <string name="log_content">内容 : </string>
      <string name="log_title">Jervis日志信息</string>
         <string name="log_edit">修改</string>
         <string name="edit_success">修改完成</string>
         <string name="log_delete">删除日志</string>
         <string name="log_comment">评论日志</string>
           <string name="log_comment_content">本日志的相关评论</string>
              <string name="log_list">日志列表</string>
                <string name="comment_person">评论人 : </string>
</resources>