<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:orientation="vertical"
    >
<GridLayout
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="4" 
   >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:layout_row="1"
        android:layout_rowSpan="3"
        android:background="#FFF"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_column="1"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_row="1"
        android:paddingLeft="2dp"
        android:text="@string/nicheng" />
    
    <ImageView
        android:id="@+id/imageView_sex"
        android:layout_column="2"
        android:layout_row="1"
        android:src="@drawable/ic_female"
      
 />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:text="@string/xinqing" />

    <TextView
        android:id="@+id/textView5"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_row="3"
        android:text="@string/place" />

    

</GridLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:gravity="center" >

    <Button
        android:id="@+id/edit_ziliao"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_and_delete"
        android:paddingBottom="15dp"
        android:text="@string/edit" 
        android:textColor="#666"/>

    <Button
        android:id="@+id/edit_psd"
       android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/delete"
          android:textColor="#666" 
            android:paddingBottom="15dp"
           android:background="@drawable/edit_and_delete"/>
  
</LinearLayout>
<TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg_table"
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/my_diary"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/main_ic_blog" />

        <Button
            android:id="@+id/my_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_ic_album" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="8dp"
            android:text="@string/my_dairy" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="6dp"
            android:text="@string/my_picture" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/list_frient"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/main_ic_friend" />

        <Button
            android:id="@+id/frient_"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/main_ic_friend_feed" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="6dp"
            android:text="@string/list_frient" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="6dp"
            android:text="@string/free_frient" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/recent_vistor"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/main_ic_visitor" />

        <Button
            android:id="@+id/my_music"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/main_ic_music" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="7dp"
            android:text="@string/recent_vistor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="7dp"
            android:text="@string/my_music" />

    </TableRow>
    
</TableLayout>


</LinearLayout>