<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/log_bg_manager"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/log_manager_return"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/bt_back" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/log_title"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dd"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_marginLeft="32dp"
            android:src="@drawable/log_bt_write" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/log_manager_title"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/item3"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="#00C"
            android:textSize="14sp"
          >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/date"
                android:textSize="18sp"  />

        <TextView
            android:id="@+id/log_manager_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/date"
           android:textColor="#00C"
             android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:text="@string/log_content"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/log_manager_content"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/item2"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:textColor="#00C"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp" >

        <TextView
            android:id="@+id/log_manager_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="1dp"
            android:text="@string/log_edit"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_manager_edit_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="1dp"
            android:text="@string/edit_success"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_manager_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="1dp"
            android:text="@string/log_delete"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_manager_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="1dp"
            android:text="@string/log_comment"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

　　 
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_comment_content"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/list_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp" >

    </ListView>

</LinearLayout>
