<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/album_bg_top"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton_friends_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/album_back"
            />

        <TextView
            android:id="@+id/textView_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_apply"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="75dp"
            android:textSize="20dp" />

      <ImageButton
            android:id="@+id/imageButton_fridends_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/album_add"
            android:layout_marginLeft="65dp"
            />  
    </LinearLayout>  
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uid" />

            <EditText
                android:id="@+id/editText_friends_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_fridens_apply"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:text="@string/add"
            android:background="@drawable/album_enter" />

        <Button
            android:id="@+id/button_fridens_back"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:text="@string/cancel"
            android:background="@drawable/album_enter" />

    </LinearLayout>

</LinearLayout>
