<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_album_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="15dp"
            android:layout_marginTop="11dp"
            android:textColor="#FF6600"
            android:layout_weight="1"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >
            
         <Button
            android:id="@+id/button_update"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/update_album"
            android:layout_marginLeft="-10dp"
            android:textColor="#FF6600"
            android:textSize="12dp"
          
             />

        <Button
            android:id="@+id/button_permisson"
           android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/comment_album"
            android:textColor="#FF6600"
             android:textSize="12dp"
               android:focusable="true" />

        <Button
            android:id="@+id/button_delect"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/delept_album"
            android:textColor="#FF6600"
             android:textSize="12dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
