<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" 
    android:background="@drawable/bg_login">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_logo"
                
                />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="wrap_content"
                android:layout_height="50px"
                android:background="@drawable/item"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:paddingLeft="8dp" >

                <requestFocus />
            </EditText>

        </TableRow>


        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/login_psd"
                android:layout_width="wrap_content"
                android:layout_height="50px"
                android:background="@drawable/item"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <CheckBox
                android:id="@+id/RemeberPsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/RememberPsd" 
               
               />
            
        </TableRow>
        
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:background="@drawable/bt_login"
           />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bt_register" />

    </LinearLayout>

</LinearLayout>